--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="This is an algorithmic Approach to develop a Vehicle Recommendation System"
+    />
   </head>
   <body class="bg-gray-100">
     <div
